--- a/new_1025/.project
+++ b/new_1025/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>new_1025</name>
+	<name>Java_newClass</name>
 	<comment></comment>
 	<projects>
 	</projects>
